# duckietown_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: AntiInstagramHealth.msg  AntiInstagramTransform.msg  AntiInstagramTransformCB.msg  CarControl.msg  CoordinationSignal.msg  CoordinationSignalETHZ17.msg  FSMState.msg  IntersectionPose.msg  IntersectionPoseImg.msg  IntersectionPoseImgDebug.msg  LEDDetection.msg  LanePose.msg  MaintenanceState.msg  ObstacleImageDetectionList.msg  ObstacleProjectedDetectionList.msg  SignalsDetection.msg  SignalsDetectionETHZ17.msg  TagInfo.msg  ThetaDotSample.msg  Twist2DStamped.msg  VehicleCorners.msg  Vsample.msg  WheelsCmdStamped.msg
